# snakebids

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .test_durations  .testmondata-shm  .testmondata-wal  Cargo.toml  LICENSE  MANIFEST.in  PR_MESSAGE.md  README.md  README.rst  __init__.py  bids_tags.json  out  pyproject.toml  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  auto-assign.yml  auto_assign.yml  dependabot.yml  labeler.yml  release-drafter-manual.yml  release-drafter.yml
.github/actions/build-test-container/: action.yaml
.github/actions/install-uv/: action.yaml
.github/workflows/: assign.yml  autoupdate-release-draft.yml  black.yml  bump_version.yml  deploy.yml  labeler.yml  nightly.yml  pr.yml  python-testing.yml  release_drafter.yml  test.yml  test_deploy.yml  upload_coverage.yml
bids_path/: __init__.py
bids_path/resources/: bids_tags.json
containers/test-template/: Dockerfile  test-template.sh
docs/: api.rst  conf.py  index.md  index.rst  requirements.txt
docs/_static/css/: typealiases.css
docs/api/: app.rst  creation.rst  details.rst  internals.rst  main.rst  manipulation.rst  paths.rst  plugins.rst  structures.rst
docs/bids_app/: config.md  config.rst  config_snakenull.md  overview.md  overview.rst  plugins.md  workflow.md  workflow.rst
docs/bids_function/: overview.rst
docs/general/: rust_acceleration.md  why_snakebids.rst
docs/migration/: 0.11_to_0.12.md  0.5_to_0.6.md  0.5_to_0.8.md  0.7_to_0.8.md  index.md
docs/running_snakebids/: overview.md  overview.rst
docs/tutorial/: .gitignore  bids  tutorial.md  tutorial.rst
docs/tutorial/step0/: README.md  Snakefile  step0.cast
docs/tutorial/step1/: Snakefile  step1.cast
docs/tutorial/step2/: Snakefile  step2.cast
docs/tutorial/step3/: Snakefile  step3.cast
docs/tutorial/step4/: Snakefile  step4.cast
docs/tutorial/step5/: Snakefile  config.yml
docs/tutorial/step6/: Snakefile  config.yml
docs/tutorial/step7/: Snakefile  config.yml
docs/tutorial/step8/: Snakefile  config.yml  run.py
project_template/: cookiecutter.json
project_template/{{cookiecutter.app_name}}/: setup.py
rust/src/: lib.rs
scratch/: Dancefile.inject
scripts/: __init__.py  update_bids.py
snakebids/: __init__.py  __init__.pyi  __init__.wip.py  _logging.py  _warningformat.py  admin.py  app.py  bids.py  cli.py  exceptions.py  fix_dd.py  output.py  pulp_compat.py  snakemake_compat.py  snakemake_compat.pyi  snakemake_io.py  snakenull.py  template.py  types.py
snakebids/bidsapp/: __init__.py  args.py  hookspecs.py  run.py
snakebids/core/: __init__.py  _querying.py  _table.py  bids.py  construct_bids.py  datasets.py  filtering.py  input_generation.py
snakebids/io/: __init__.py  console.py  printing.py  yaml.py
snakebids/jinja2_ext/: __init__.py  __init__.pyi  colorama.py  snakebids_version.py  toml_encode.py  vcs.py
snakebids/paths/: __init__.py  __init__.pyi  _config.py  _factory.py  _presets.py  _utils.py  config.py  factory.py  presets.py  presets.pyi  specs.py  specs.pyi  utils.py
snakebids/plugins/: __init__.py  __init__.pyi  base.py  bidsargs.py  cli_config.py  component_edit.py  pybidsdb.py  snakemake.py  validate.py  validation.py  validator.py
snakebids/project_template/: cookiecutter.json  copier.yaml  {% if build_system != 'poetry' %}pyproject.toml{% endif %}.jinja  {% if build_system == 'poetry' %}poetry.lock{% endif %}.jinja  {% if build_system == 'poetry' %}pyproject.toml{% endif %}.jinja
snakebids/project_template/{{ cookiecutter.__app_name }}/: pipeline_description.json  pyproject.toml
snakebids/project_template/{{ cookiecutter.__app_name }}/docs/: conf.py
snakebids/project_template/{{ cookiecutter.__app_name }}/docs/getting_started/: installation.md
snakebids/project_template/{{ cookiecutter.__app_name }}/docs/usage/: app_cli.md
snakebids/project_template/{{ cookiecutter.__app_name }}/{{ cookiecutter.__app_name }}/: run.py
snakebids/resources/: __init__.py  bids_tags.json
snakebids/tests/: __init__.py  conftest.py  helpers.py  strategies.py  test_admin.py  test_app.py  test_bids.py  test_bidsapp.py  test_cli.py  test_datasets.py  test_filtering.py  test_generate_inputs.py  test_output.py  test_printing.py  test_snakemake_io.py  test_snakenull.py  test_tables.py  test_template.py  test_utils.py  test_validate_plugin.py  test_yaml.py
snakebids/utils/: __init__.py  containers.py  output.py  sb_itertools.py  sb_typing.py  sb_typing.pyi  snakemake_io.py  user_property.py  user_property.pyi  utils.py
src/snakebids/: __init__.py  __init__.pyi  _warningformat.py  app.py  cli.py  exceptions.py  snakemake_compat.py  snakemake_compat.pyi  types.py
src/snakebids/io/: yaml.py  (+3 more)
template_app/: README.md  README.rst  pipeline_description.json  run.py  setup.py
template_app/app_name/: pipeline_description.json  run.py
template_app/config/: snakebids.yml
template_app/docs/: conf.py  index.rst
template_app/workflow/: Snakefile
tests/: __init__.py  helpers.py  strategies.py  test_admin.py  test_app.py  test_bids.py  test_bidsapp.py  test_datasets.py  test_filtering.py  test_generate_inputs.py  test_output.py  test_printing.py  test_querying.py  test_querying_unit.py  test_snakemake.py  test_snakemake_io.py  test_snakemake_templates.py  test_snakemake_v2.py  test_template.py  test_utils.py  test_yaml.py
tests/data/: custom_config_nonstandard.json
tests/test_paths/: __init__.py  test_bids.py  test_specs.py
tests/test_plugins/: __init__.py  test_bidsargs.py  test_component_edit.py  test_pybidsdb.py  test_snakemake.py  test_version.py
tests/test_snakemake_templates/: strategies.py  test_snakemake_formatter.py  test_snakemake_wildcards.py
typings/: cached_property.pyi  copier.pyi  deprecation.pyi
typings/bids/: __init__.pyi  _version.pyi  config.pyi  due.pyi  exceptions.pyi  utils.pyi
typings/cached_property/: __init__.pyi
typings/importlib_metadata/: __init__.pyi
typings/pyfakefs/: fake_file.pyi  fake_filesystem.pyi  helpers.pyi
typings/snakemake/: exceptions.pyi  io.pyi  script.pyi
(+162 files in other folders)
