[project]
name = "snakebids"
dynamic = ["version"]
description = "BIDS integration into snakemake workflows"
readme = "README.md"
# upper cap imposed by pytest-split
requires-python = ">=3.10,<4.0"
authors = [
    { name = "Ali Khan", email = "alik@robarts.ca" },
    { name = "Peter Van Dyken", email = "pvandyk2@uwo.ca" },
    { name = "Tristan Kuehn", email = "tkuehn@uwo.ca" },
    { name = "Jason Kai", email = "tkai@uwo.ca" },
]
license = "MIT"
dependencies = [
    # core dep with high breakage potential given plans for redesign, so keep upper limit
    "pybids ~=0.21.0",
    "snakemake >=5.28.0,<8; python_version < '3.11'",
    "snakemake >=7.18.2; python_version >= '3.11'",
    "typing-extensions >=3.10.0",
    # minimum 22.2 to get "alias" parameter on attrs.field
    "attrs >=22.2.0",
    "boutiques >=0.5.25",
    "more-itertools >=8",
    # package developed in complete tandem with snakebids, so no need for a range
    "pvandyken-deprecated ==0.0.4",
    # Need this until py39
    "importlib-resources >=5.12.0",

    #  Below are non-direct dependencies (i.e. dependencies of other dependencies)
    #  specified to ensure a version with a pre-built wheel is installed depending
    #  on the python version being used.
    "numpy >=1.23.2; python_version >= '3.11'",
    "pandas >=2.1.1; python_version >= '3.12'",
    # minimum 9.2.0 because of breaking dependency changes and changes to validation
    # errors
    "copier >=9.2.0",
    "jinja2-time >=0.2.0",
    # minimum 2.31.0 because of security vulnerability
    "requests >=2.31.0",
    "ruamel-yaml >=0.17.2",
    "lazy-loader >=0.3",
    # Docutils is a requirement of snakemake, for snakebids otherwise it is merely a doc
    # dependency. 0.21.post1 needs to be excluded because of
    # https://github.com/python-poetry/poetry/issues/9293
    "docutils !=0.21.post1",
    "pluggy >=1.3",
]

[project.urls]
repository = "https://github.com/khanlab/snakebids"
documentation = "https://snakebids.readthedocs.io/"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[dependency-groups]
dev = [
    "pytest ~=8.0",
    "pytest-mock >=3.7.0,<4",
    "poethepoet ~=0.36.0",
    "pre-commit ~=4.2.0",
    # a mkinit dep has the 'platform_system == \"Windows\"' as a marker on an incompatible dependency
    #   (pydantic<2.0 cf copier), so set the inverse as a marker here so mkinit can
    #   still be resolved
    "mkinit >=1.1.0,<2.0.0; platform_system != 'Windows'",
    "hypothesis ~=6.137.1",
    "pytest-benchmark ~=5.1.0",
    "pyfakefs ~=5.1",
    "pyparsing ~=3.2.3",
    "pathvalidate ~=3.3.0",
    "pyright ~=1.1.370",
    "ruff ~=0.12.8",
    "pytest-xdist ~=3.8.0",
    "pytest-split ~=0.9",
    "tomli ~=2.2.1",
    "requests-mock ~=1.12.1",
    "pytest-cov ~=6.2.1",
    "docstring-parser ~=0.16",
]

docs = [
    "sphinx ~=7.0",
    "sphinx-argparse ~=0.4.0",
    "sphinxcontrib-asciinema ~=0.4.0",
    "myst-parser ~=3.0",
    "furo ==2025.7.19",
    "sphinx-copybutton ~=0.5.2",
    "sphinx-reredirects ~=0.1.3",
    "sphinx-design ~=0.6",
    "sphinx-autobuild ==2024.10.03",
]

[project.scripts]
snakebids = "snakebids.admin:main"

[tool.poe.tasks]
setup = "pre-commit install"
sort.cmd = "ruff check --fix --select I001 $path"
sort.args = [
    { name = "path", default = "src tests scripts", positional = true },
]
fmt.cmd = "ruff format $path"
fmt.args = [
    { name = "path", default = "src scripts tests", positional = true },
]

ruff = "ruff check src scripts tests"

pyright = "pyright"
quality = ["fmt", "ruff", "pyright"]
fix = ["fmt", "ruff --fix"]
test = """
pytest --doctest-modules --ignore=docs \
    --ignore=snakebids/project_template --benchmark-disable
"""
benchmark = "pytest --benchmark-only --benchmark-autosave"
docs = "sphinx-autobuild docs build/docs --watch snakebids -W"

[[tool.poe.tasks.update-bids.sequence]]
script = "scripts.update_bids:main"
[[tool.poe.tasks.update-bids.sequence]]
ref = "mkinit"

[[tool.poe.tasks.mkinit.sequence]]
cmd = "mkinit --recursive --nomods --lazy_loader_typed --relative -i snakebids"
[[tool.poe.tasks.mkinit.sequence]]
ref = "fix"

[tool.poe.tasks._get_version]
imports = ["platform"]
expr = "platform.python_version()"

[tool.poe.tasks.build-container]
args = [{ name = "container_id", positional = true, required = true }]
uses = { VERSION = "_get_version" }
cmd = """
    docker build "containers/${container_id}" \
        --tag "snakebids/${container_id}:${VERSION}" \
        --build-arg="PYTHON_VERSION=${VERSION}"
"""

[tool.pytest.ini_options]
markers = [
    "docker: marks tests as requiring docker (deselect with '-m \"not docker\"')",
    "disable_fakefs: disable the fake filesystem in a hypothesis test"
]

[tool.coverage.run]
omit = ["src/snakebids/project_template/**", "tests/**"]

[tool.coverage.report]
exclude_also = [
    "@overload",
    'class [a-zA-Z0-9_]+\([^)]*Protocol.*\)',
    'if TYPE_CHECKING',
    "def __dir__",
    '@(abc\.)abstractmethod'
]

[tool.pyright]
include = ["src", "tests", "scripts"]
exclude = ["src/snakebids/project_template", "typings"]
typeCheckingMode = "strict"
reportPrivateUsage = false
reportImportCycles = false
enableExperimentalFeatures = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "FA",  # flake8-future-annotations
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    # We use os.path a lot in "legitimate" ways, so this ruleset has too many
    # false positives
    # "PTH",  # flake8-use-pathlib
    "TRY",  # tryceratops
    "FLY",  # flynt
    "D",    # pydocstyle
    "PL",   # pylint
    "RUF",  # ruff
    "T100", # debugger
    "I",    # isort
    # Other perf rules give more false positives than benefits
    "PERF101", # do not cast iterable to list
]
ignore = [
    "PLR0913",
    "PLW1641", # all paths with __eq__ must have __hash__ INCORRECT (https://github.com/astral-sh/ruff/issues/18821)
    "D105",    # missing docstring in magic method
    "D100",    # Require docstring in public modules
    "D104",    # Require docstring in public packages
    "S603",    # Subprocess without shell equals true
    "S607",    # start-process-with-partial-path
    # recommended ignores for ruff format
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]

[tool.ruff.per-file-target-version]
"**/*.pyi" = "py314"

[tool.ruff.lint.per-file-ignores]
"src/snakebids/project_template/**" = ["N999"]
"tests/**" = [
    "D",
    "S101", # assert
    "S307", # Use of eval
    "SLF",
]
"src/snakebids/**/__init__.py" = ["F811"] # redefinition of unused __all__

[tool.ruff.lint.pydocstyle]
convention = "numpy"
ignore-decorators = ["snakebids.utils.utils.property_alias"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["filter"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
itertools = "it"
functools = "ft"
operator = "op"
subprocess = "sp"
importlib_resources = "impr"
"importlib.resources" = "impr"
"importlib.metadata" = "impm"
more_itertools = "itx"
"hypothesis.strategies" = "st"
"tests.strategies" = "sb_st"
"snakebids.utils.sb_itertools" = "sb_it"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.lock,*.css,./typings'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''
